--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -1,13 +1,7 @@
 <head>
   <title>Forgot Password | MovieFusion</title>
-  <link
-    rel="shortcut icon"
-    href="{{ url_for('static', filename='images/fav-icon.png') }}"
-  />
-  <link
-    rel="stylesheet"
-    href="{{ url_for('static', filename='css/form_style.css') }}"
-  />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='images/fav-icon.png') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/form_style.css') }}" />
 </head>
 
 <body>
@@ -23,26 +17,13 @@
       <div class="content">
         <h2>Forgot Password</h2>
         <div class="form">
-          <form
-            action="{{ url_for('auth.reset_password', token=token) }}"
-            method="post"
-          >
+          <form action="{{ url_for('auth.reset_password', token=token) }}" method="post">
             <div class="inputBox">
-              <input
-                type="password"
-                name="new_password"
-                id="new_password"
-                required
-              />
+              <input type="password" name="new_password" id="new_password" required />
               <i>Password</i>
             </div>
             <div class="inputBox" style="margin-top: 5%">
-              <input
-                type="password"
-                name="confirm_new_password"
-                id="confirm_new_password"
-                required
-              />
+              <input type="password" name="confirm_new_password" id="confirm_new_password" required />
               <i>Confirm Password</i>
             </div>
             <p id="passwordMatchError" style="color: e70634; display: none">
@@ -50,7 +31,7 @@
             </p>
             <div class="inputBox" style="margin-top: 5%">
               <button type="submit">
-                Reset Password {% include 'auth/submit_button.html' %}
+                Reset Password
               </button>
             </div>
           </form>
