--- a/app/templates/auth/forgot_password.html
+++ b/app/templates/auth/forgot_password.html
@@ -1,13 +1,7 @@
 <head>
   <title>Forgot Password | MovieFusion</title>
-  <link
-    rel="shortcut icon"
-    href="{{ url_for('static', filename='images/fav-icon.png') }}"
-  />
-  <link
-    rel="stylesheet"
-    href="{{ url_for('static', filename='css/form_style.css') }}"
-  />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='images/fav-icon.png') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/form_style.css') }}" />
 </head>
 
 <body>
@@ -32,7 +26,7 @@
             </div>
             <div class="inputBox" style="margin-top: 5%">
               <button type="submit">
-                Reset Password {% include 'auth/submit_button.html' %}
+                Reset Password
               </button>
             </div>
           </form>
