--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,13 +1,7 @@
 <head>
   <title>Login | MovieFusion</title>
-  <link
-    rel="shortcut icon"
-    href="{{ url_for('static', filename='images/fav-icon.png') }}"
-  />
-  <link
-    rel="stylesheet"
-    href="{{ url_for('static', filename='css/form_style.css') }}"
-  />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='images/fav-icon.png') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/form_style.css') }}" />
 </head>
 
 <body>
@@ -31,14 +25,12 @@
               <input type="password" name="password" required /> <i>Password</i>
             </div>
             <div class="links" style="margin-top: 5%">
-              <a href="{{ url_for('auth.forgot_password') }}"
-                >Forgot Password?</a
-              >
+              <a href="{{ url_for('auth.forgot_password') }}">Forgot Password?</a>
               <a href="{{ url_for('auth.register') }}">Sign Up</a>
             </div>
             <div class="inputBox" style="margin-top: 5%">
               <button type="submit">
-                Login {% include 'auth/submit_button.html' %}
+                Login
               </button>
             </div>
           </form>
