--- a/app/templates/email/password_reset_email.html
+++ b/app/templates/email/password_reset_email.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <style>
-        .container {
-            font-family: Arial, sans-serif;
-            margin: 0 auto;
-            padding: 20px;
-            max-width: 600px;
-            background-color: #f9f9f9;
-            border: 1px solid #e70634;
-            border-radius: 10px;
-        }
+    <head>
+        <style>
+            .container {
+                font-family: Arial, sans-serif;
+                margin: 0 auto;
+                padding: 20px;
+                max-width: 600px;
+                background-color: #f9f9f9;
+                border: 1px solid #e70634;
+                border-radius: 10px;
+            }
 
-        .header {
-            color: #e70634;
-            text-align: center;
-        }
+            .header {
+                color: #e70634;
+                text-align: center;
+            }
 
-        .link {
-            font-size: 18px;
-            text-align: center;
-            margin: 20px 0;
-            padding: 10px;
-            background-color: #fff;
-            border: 1px solid #e70634;
-            border-radius: 5px;
-            display: inline-block;
-            text-decoration: none;
-            color: #e70634;
-        }
+            .link {
+                font-size: 18px;
+                text-align: center;
+                margin: 20px 0;
+                padding: 10px;
+                background-color: #fff;
+                border: 1px solid #e70634;
+                border-radius: 5px;
+                display: inline-block;
+                text-decoration: none;
+                color: #e70634;
+            }
 
-        .footer {
-            text-align: center;
-            margin-top: 20px;
-            color: #555;
-        }
+            .footer {
+                text-align: center;
+                margin-top: 20px;
+                color: #555;
+            }
 
-        .footer a {
-            color: #e70634;
-            text-decoration: none;
-        }
-    </style>
-</head>
+            .footer a {
+                color: #e70634;
+                text-decoration: none;
+            }
+        </style>
+    </head>
 
-<body>
-    <div class="container">
-        <h2 class="header">Password Reset Request</h2>
-        <p>We received a request to reset your password for your MovieFusion account.</p>
+    <body>
+        <div class="container">
+            <h2 class="header">Password Reset Request</h2>
+            <p>We received a request to reset your password for your MovieFusion account.</p>
 
-        <p>If you did not request a password reset, please ignore this email. Otherwise, you can reset your password
-            using the link below:</p>
-        <a href="{{ reset_link }}" class="link">Reset Password</a>
+            <p>If you did not request a password reset, please ignore this email. Otherwise, you can reset your password
+                using the link below:</p>
+            <a href="{{ reset_link }}" class="link">Reset Password</a>
 
-        <p>This link is valid for 15 minutes. If you don't reset your password within this time, you can request a new
-            password reset.</p>
+            <p>This link is valid for 15 minutes. If you don't reset your password within this time, you can request a
+                new
+                password reset.</p>
 
-        <div class="footer">
-            <p>Best regards,<br>
-                The MovieFusion Team</p>
-            <p><a href="https://github.com/aayushsoni4/MovieFusion">Visit MovieFusion</a></p>
+            <div class="footer">
+                <p>Best regards,<br>
+                    The MovieFusion Team</p>
+                <p><a href="https://github.com/aayushsoni4/MovieFusion">Visit MovieFusion</a></p>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 
 </html>
