--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,12 +2,8 @@
 <title>MovieFusion</title>
 
 <head>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    integrity="sha384-43wU5P3E9cW3JVa/4vWX+RrMk0QYNQ+bQ1crYOhjbKjqvcE3fLlFG50C0fAW+6+J"
-    crossorigin="anonymous"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-43wU5P3E9cW3JVa/4vWX+RrMk0QYNQ+bQ1crYOhjbKjqvcE3fLlFG50C0fAW+6+J" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -29,24 +25,14 @@
       Movie<span>Fusion</span>
     </a>
     <!--GitHub icon------------------->
-    <a
-      href="https://github.com/aayushsoni4/MovieFusion"
-      target="_blank"
-      class="github-icon"
-    >
+    <a href="https://github.com/aayushsoni4/MovieFusion" target="_blank" class="github-icon">
       <i class="fab fa-github"></i>
     </a>
     <!--menu------------------->
     {% include 'menu.html' %}
     <!--Search-box------------->
     <div class="search-box">
-      <input
-        type="text"
-        id="search-input"
-        placeholder="Search Movie"
-        class="search-input"
-        required
-      />
+      <input type="text" id="search-input" placeholder="Search Movie" class="search-input" required />
       <button onclick="submitSearch()" class="search-button">
         <i class="fas fa-search"></i>
       </button>
@@ -63,18 +49,12 @@
           <!--box------------------->
           <div class="main-slider-box">
             <!--overlayer-------->
-            <a
-              href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-              class="main-slider-overlay"
-            >
+            <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}" class="main-slider-overlay">
               <i class="fas fa-play"></i>
             </a>
             <!--img----------->
             <div class="main-slider-img">
-              <img
-                alt="Poster"
-                src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}"
-              />
+              <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
             </div>
             <!--text---------->
             <div class="main-slider-text movie-poster">
@@ -85,9 +65,7 @@
                 <!--name----->
                 <div class="movie-name">
                   <span>{{ movie.get('release_date',"")[:4] }}</span>
-                  <a
-                    href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-                  >
+                  <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
                     {{ movie['title'] }}
                   </a>
                 </div>
@@ -99,18 +77,14 @@
                     {% if movie.get('genres') %} {% for genre in
                     movie['genres']%}
                     <a
-                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}"
-                      >{{ genre['name'] }}</a
-                    >
+                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{ genre['name'] }}</a>
                     {% endfor %} {% endif %}
                   </div>
                   <!--rating--->
                   <div class="rating">
                     {{ '%.1f' % movie['vote_average'] }}
-                    <img
-                      alt="tmbd"
-                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg"
-                    />
+                    <img alt="tmbd"
+                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
                   </div>
                 </div>
               </div>
@@ -144,18 +118,12 @@
           <!--box------------------->
           <div class="main-slider-box">
             <!--overlayer-------->
-            <a
-              href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-              class="main-slider-overlay"
-            >
+            <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}" class="main-slider-overlay">
               <i class="fas fa-play"></i>
             </a>
             <!--img----------->
             <div class="main-slider-img">
-              <img
-                alt="Poster"
-                src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}"
-              />
+              <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
             </div>
             <!--text---------->
             <div class="main-slider-text movie-poster">
@@ -166,9 +134,7 @@
                 <!--name----->
                 <div class="movie-name">
                   <span>{{ movie.get('release_date',"")[:4] }}</span>
-                  <a
-                    href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-                  >
+                  <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
                     {{ movie['title'] }}
                   </a>
                 </div>
@@ -180,18 +146,14 @@
                     {% if movie.get('genres') %} {% for genre in
                     movie['genres']%}
                     <a
-                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}"
-                      >{{ genre['name'] }}</a
-                    >
+                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{ genre['name'] }}</a>
                     {% endfor %} {% endif %}
                   </div>
                   <!--rating--->
                   <div class="rating">
                     {{ '%.1f' % movie['vote_average'] }}
-                    <img
-                      alt="tmbd"
-                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg"
-                    />
+                    <img alt="tmbd"
+                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
                   </div>
                 </div>
               </div>
@@ -224,18 +186,12 @@
           <!--box------------------->
           <div class="main-slider-box">
             <!--overlayer-------->
-            <a
-              href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-              class="main-slider-overlay"
-            >
+            <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}" class="main-slider-overlay">
               <i class="fas fa-play"></i>
             </a>
             <!--img----------->
             <div class="main-slider-img">
-              <img
-                alt="Poster"
-                src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}"
-              />
+              <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
             </div>
             <!--text---------->
             <div class="main-slider-text movie-poster">
@@ -246,9 +202,7 @@
                 <!--name----->
                 <div class="movie-name">
                   <span>{{ movie.get('release_date',"")[:4] }}</span>
-                  <a
-                    href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-                  >
+                  <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
                     {{ movie['title'] }}
                   </a>
                 </div>
@@ -260,18 +214,14 @@
                     {% if movie.get('genres') %} {% for genre in
                     movie['genres']%}
                     <a
-                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}"
-                      >{{ genre['name'] }}</a
-                    >
+                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{ genre['name'] }}</a>
                     {% endfor %} {% endif %}
                   </div>
                   <!--rating--->
                   <div class="rating">
                     {{ '%.1f' % movie['vote_average'] }}
-                    <img
-                      alt="tmbd"
-                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg"
-                    />
+                    <img alt="tmbd"
+                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
                   </div>
                 </div>
               </div>
@@ -306,18 +256,12 @@
           <!--box------------------->
           <div class="main-slider-box">
             <!--overlayer-------->
-            <a
-              href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-              class="main-slider-overlay"
-            >
+            <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}" class="main-slider-overlay">
               <i class="fas fa-play"></i>
             </a>
             <!--img----------->
             <div class="main-slider-img">
-              <img
-                alt="Poster"
-                src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}"
-              />
+              <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
             </div>
             <!--text---------->
             <div class="main-slider-text movie-poster">
@@ -328,9 +272,7 @@
                 <!--name----->
                 <div class="movie-name">
                   <span>{{ movie.get('release_date',"")[:4] }}</span>
-                  <a
-                    href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-                  >
+                  <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
                     {{ movie['title'] }}
                   </a>
                 </div>
@@ -342,18 +284,14 @@
                     {% if movie.get('genres') %} {% for genre in
                     movie['genres']%}
                     <a
-                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}"
-                      >{{ genre['name'] }}</a
-                    >
+                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{ genre['name'] }}</a>
                     {% endfor %} {% endif %}
                   </div>
                   <!--rating--->
                   <div class="rating">
                     {{ '%.1f' % movie['vote_average'] }}
-                    <img
-                      alt="tmbd"
-                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg"
-                    />
+                    <img alt="tmbd"
+                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
                   </div>
                 </div>
               </div>
@@ -388,18 +326,12 @@
           <!--box------------------->
           <div class="main-slider-box">
             <!--overlayer-------->
-            <a
-              href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-              class="main-slider-overlay"
-            >
+            <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}" class="main-slider-overlay">
               <i class="fas fa-play"></i>
             </a>
             <!--img----------->
             <div class="main-slider-img">
-              <img
-                alt="Poster"
-                src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}"
-              />
+              <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
             </div>
             <!--text---------->
             <div class="main-slider-text movie-poster">
@@ -410,9 +342,7 @@
                 <!--name----->
                 <div class="movie-name">
                   <span>{{ movie.get('release_date',"")[:4] }}</span>
-                  <a
-                    href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-                  >
+                  <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
                     {{ movie['title'] }}
                   </a>
                 </div>
@@ -424,18 +354,14 @@
                     {% if movie.get('genres') %} {% for genre in
                     movie['genres']%}
                     <a
-                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}"
-                      >{{ genre['name'] }}</a
-                    >
+                      href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{ genre['name'] }}</a>
                     {% endfor %} {% endif %}
                   </div>
                   <!--rating--->
                   <div class="rating">
                     {{ '%.1f' % movie['vote_average'] }}
-                    <img
-                      alt="tmbd"
-                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg"
-                    />
+                    <img alt="tmbd"
+                      src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
                   </div>
                 </div>
               </div>
@@ -467,10 +393,7 @@
         <div class="post-box">
           <!--img-->
           <div class="post-img">
-            <img
-              alt=""
-              src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}"
-            />
+            <img alt="" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
           </div>
           <!--text---------->
           <div class="main-slider-text">
@@ -481,9 +404,7 @@
               <!--name----->
               <div class="movie-name">
                 <span>{{ movie.get('release_date',"")[:4] }}</span>
-                <a
-                  href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
-                >
+                <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
                   {{ movie['title'] }}
                 </a>
               </div>
@@ -492,19 +413,14 @@
                 <!--category-->
                 <div class="category">
                   {% if movie.get('genres') %} {% for genre in movie['genres']%}
-                  <a
-                    href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}"
-                    >{{ genre['name'] }}</a
-                  >
+                  <a href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{ genre['name'] }}</a>
                   {% endfor %} {% endif %}
                 </div>
                 <!--rating--->
                 <div class="rating">
                   {{ '%.1f' % movie['vote_average'] }}
-                  <img
-                    alt="tmbd"
-                    src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg"
-                  />
+                  <img alt="tmbd"
+                    src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
                 </div>
               </div>
             </div>
